<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Masa (kg)"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintHorizontal_bias="0.5"/>

    <EditText
        android:id="@+id/heightInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Wzrost (cm)"
        app:layout_constraintTop_toBottomOf="@id/weightInput"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.5"/>

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Oblicz"
        app:layout_constraintTop_toBottomOf="@id/heightInput"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
        android:id="@+id/bmiResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="BMI"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/calculateButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintHorizontal_bias="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>
